# irods_training

./: .gitignore  LICENSE.md  README.md  irodstraining  irodstraining.pub  training.pem  training.ppk
advanced/: core.py  example_kibana_dashboard.json  find_thumbnails.r  launch_compute_container.re  launch_compute_continer.r  python_storage_balancing.py  python_storage_balancing.re  set_default_resource.re  storage_balancing.re  submit_thumbnail_job.sh  thumbnail.re  thumbnail.submit  thumbnail_configuration.re  training.re
advanced/data_tiering/: CMakeLists.txt  apply_access_time.re  apply_data_tiering.re  data_tiering_configuration.re  example_tiering_policy.re  launch_data_tiering.r
advanced/data_tiering/irods_microservice_plugin_setavu/: CMakeLists.txt
advanced/data_tiering/irods_microservice_plugin_setavu/src/: Makefile
advanced/data_tiering/src/: msiget_leaf_resources.cpp
advanced/hpc_compute_to_data/: CMakeLists.txt  README.md  bytes_unicode_mapper.py  clean_after_comp2data.sh  compute_to_data.py  compute_to_data.re  compute_to_data_support.py  core.py.compute_to_data  docker_run.sh  launch_compute.r  launch_compute_container.re  postinst  singularity.SLURM  singularity_images.conf  spawn_remote_containers.r  spawn_rmt_singularity.r  submit_SLURM_job.sh  task_config.json  wrap_singularity
advanced/hpc_compute_to_data/compute/: admin_as_rodsuser.json
advanced/hpc_compute_to_data/jupyter_notebook/: Dockerfile  Dockerfile.2  README.md  copy_files_with_new_owner_and_group  lpfilter.ipynb
advanced/hpc_compute_to_data/jupyter_notebook/mymodule/: side_effect.py
advanced/hpc_compute_to_data/msvc__msiregister_as_admin/: CMakeLists.txt
advanced/hpc_compute_to_data/msvc__msiregister_as_admin/src/: lib-microservice-register_as_admin.cpp
advanced/hpc_compute_to_data/old/: adminProxy_detect_physpath.py  c2d_default_resource.re  launch_compute_container.re
advanced/hpc_compute_to_data/ubuntu_14_16/: install_singularity.sh
advanced/hpc_data_to_compute/: CMakeLists.txt  README.md  convert.SLURM  core.py.data_to_compute  create_thumbnails.r  data_to_compute.re  data_to_compute_X.r  detect_data_object.py  detect_thumbnails.py  errors.rc  find_compute_hostname.py  iregrepl  irods_compute.py  job_params.json  overall_description.md  postinst  put_data_to_compute.py  rescName_from_kvpair.r  slurm.conf.template  slurm.conf.template.ubuntu20  slurm.conf.template.ubuntu22  slurm.upstart  slurm_epilog  slurm_prolog  spawn_d2c_thumbnail_jobs.r  spawn_remote_slurm_jobs.r  submit_thumbnail_job.sh  thumbnail.re  thumbnail.submit  thumbnail_configuration.re  thumbnail_read_config.py  ubuntu14_install_munge_and_slurm.sh
advanced/hpc_data_to_compute/compute/: admin_as_rodsuser.json  common.py  irods_compute_functions  job_params.json  util.py
advanced/hpc_data_to_compute/old/: create_thumbnails.r  get_physical_path  md_tags_for_d2c.json  put_data_to_compute.json
advanced/hpc_data_to_compute/ubuntu_16/: install_munge_and_slurm.sh  munge.upstart
advanced/hpc_data_to_compute/ubuntu_18/: errors.rc  install_munge_and_slurm.sh  munge.orig
advanced/hpc_data_to_compute/ubuntu_20/: install_and_configure_slurm.sh
advanced/hpc_data_to_compute/ubuntu_22/: install_and_configure_slurm.sh
advanced/irods_api_example/: CMakeLists.txt  api_plugin.cmake  icommand.cmake
advanced/irods_api_example/src/: iapi_example.cpp  libapi-example.cpp
advanced/irods_api_plugin/: CMakeLists.txt  icommand.cmake
advanced/irods_api_plugin/cmake/: development_library.cmake
advanced/irods_microservice_plugin/: CMakeLists.txt
advanced/irods_microservice_plugin_example/: CMakeLists.txt
advanced/irods_microservice_plugin_mkdir/: CMakeLists.txt
advanced/irods_microservice_plugin_mkdir/cmake/: development_library.cmake
advanced/irods_microservice_plugin_mkdir/src/: lib-microservice-example.cpp
advanced/irods_microservice_plugin_uuid/: CMakeLists.txt
advanced/irods_microservice_plugin_uuid/cmake/: development_library.cmake
advanced/irods_microservice_plugin_uuid/src/: libmsiget_uuid.cpp
advanced/irods_rule_engine_plugin_storage_balancing/: CMakeLists.txt  rule_engine_plugin.cmake
advanced/irods_rule_engine_plugin_storage_balancing/cmake/: development_library.cmake
advanced/irods_rule_engine_plugin_storage_balancing/src/: libirods_rule_engine_plugin-cpp-storage-balancing.cpp  libre-storage-balancing.cpp
advanced/landing_zone_microservices/: CMakeLists.txt  landing_zone.r  landing_zone_microservices.cmake
advanced/landing_zone_microservices/msifilesystem_rename/: libmsifilesystem_rename.cpp
advanced/landing_zone_microservices/msiget_filepaths_from_glob/: libmsiget_filepaths_from_glob.cpp
advanced/landing_zone_microservices/msiget_image_meta/: libmsiget_image_meta.cpp  msiget_image_meta_test.r
advanced/landing_zone_microservices/msiput_dataobj_or_coll/: libmsiput_dataobj_or_coll.cpp  msi_put_test.r
advanced/storage_tiering/: CMakeLists.txt  README.md  access_time_configuration.re  apply_storage_tiering.re  get_leaf_resources.cmake  launch_storage_tiering.r  set_avu.cmake  storage_tiering_configuration.re
advanced/storage_tiering/src/: msiget_leaf_resources.cpp  msiset_avu.cpp
beginner/: Dockerfile.pdflatex  Makefile  core.py  example_delay.r  irods_beginner_training_2016.tex  irods_beginner_training_2018.tex  irods_beginner_training_2019.tex  irods_beginner_training_2022.tex  irods_beginner_training_2023.tex  irods_beginner_training_2024.tex  irods_beginner_training_2025.tex  pdf_from_latex.sh  server_config.json  training.re  ugm2016.pem
